--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <header class="header">
 
-    <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> medcare. </a>
+    <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> med. </a>
 
     <nav class="navbar">
         <a href="#home">home</a>
